--- a/index.html
+++ b/index.html
@@ -13,19 +13,19 @@
         <div class="row">
             <nav class="nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Item 1</a>
+                    <a class="nav-link" href="#">Eu</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Item 2</a>
+                    <a class="nav-link" href="#">Colégio</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Item 3</a>
+                    <a class="nav-link" href="#">Hobs</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Item 4</a>
+                    <a class="nav-link" href="#">Amigos</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Item 5</a>
+                    <a class="nav-link" href="#">Gostos</a>
                 </li>
             </nav>
         </div>
