--- a/index.html
+++ b/index.html
@@ -36,6 +36,19 @@
         </div>
         <div class="row">
             <div class="col">
+                <div class="container">
+                    <div class="row">
+                      <div class="col align-self-start">
+                        Meu nome é Felipe Barros de Andrade Silva 
+                      </div>
+                      <div class="col align-self-center">
+                        One of three columns
+                      </div>
+                      <div class="col align-self-end">
+                        One of three columns
+                      </div>
+                    </div>
+                  </div>
                 
             </div>
         </div>
