--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
                 <div class="container">
                     <div class="row">
                       <div class="col align-self-start">
-                        Meu nome é Felipe Barros de Andrade Silva 
+                       
                       </div>
                       <div class="col align-self-center">
-                        One of three columns
+                        Feipe Barros de Andrade Silva
                       </div>
                       <div class="col align-self-end">
-                        One of three columns
+                       
                       </div>
                     </div>
                   </div>
