--- a/index.html
+++ b/index.html
@@ -44,13 +44,21 @@
         <div class="row">
             <div class="col">
                <i>Idade: 16<i>
-               <d>Data de Nascimento: 08/12/2004</d> 
-               <s>signo: Sagitário
-                Ascendente: Libra
-               </s>   
                 
             </div>
         </div>
+        <div class="row">
+            <div class="col">
+                <d>Data de Nascimento: 08/12/2004</d> 
+            </div>
+        </div>
+                <div class="row">
+                    <div class="col">
+                        <s>signo: Sagitário
+                            Ascendente: Libra
+                           </s>  
+                        </div>
+                    </div>           
     </div>
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
