--- a/index.html
+++ b/index.html
@@ -54,9 +54,7 @@
         </div>
                 <div class="row">
                     <div class="col">
-                        <s>signo: Sagitário
-                            Ascendente: Libra
-                           </s>  
+                        <s>signo: Sagitário Ascendente: Libra</s>  
                         </div>
                     </div>           
     </div>
