--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </div>
                 <div class="row">
                     <div class="col">
-                        <s>signo: Sagitário Ascendente: Libra</s>  
+                        <p>signo: Sagitário Ascendente: Libra</p>  
                         </div>
                     </div>           
     </div>
