--- a/index.html
+++ b/index.html
@@ -57,22 +57,25 @@
                         <p>signo: Sagitário Ascendente: Libra</p>  
                         </div>
                     </div>           
-    </div>
-    <div class="row" id="Colégio">
-        <div class="col">
-            <p>Colégio Módulo</p>
+              </div>
+        <div class="row" id="Colégio">
+            <div class="col">
+                <p>Colégio Módulo</p>
+        </div>
             </div>
+        <div class="row" id="Colégio">
+            <div class="col"> 
+                <p>série: 3MRB (3 ano do Ensino Médio)</p>   
+        </div>
             </div>
-            <div class="row" id="Colégio">
-                <div class="col"> 
-                    <p>série: 3MRB (3 ano do Ensino Médio)</p>   
+        <div class="row" id="Hobs">
+            <div class="col">
+                <h2>Hobs</h2>
+                <p>jardinagem</p>
+                <p>culinária</p>
+                <p>Filmes e séries: Terror, fantasia, suspense e ficção científica</p>
+        </div>
             </div>
-                </div>
-            <div class="row" id="Hobs">
-                    <div class="col">
-                        <p>Hobs</p>
-            </div>
-                    </div>
                     
 
     
