--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <p>- Gosto de jardinagem, pois é algo que me acalma e me conecta com a natureza</p>
                 <p>- Adoro cozinhar, pois é algo que desenvolvo desde criança</p>
                 <p>- Desenhar é meu passa tempo, mas tenho um pouco de preguiça</p>
-                <p>Adoro dançar qualquer tipo de música</p>
+                <p>-Adoro dançar qualquer tipo de música</p>
         </div>
             </div>
         <div class="row" id="Gostos">
